# MoneroWebCoordinator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
deploy/: coordinator.service  install.sh
src/: config.rs  error.rs  jobs.rs  main.rs  metrics.rs  protocol.rs  ratelimit.rs  rpc.rs  server.rs  session.rs  template.rs  validator.rs
