[package]
name = "monero-web-coordinator"
version = "0.1.0"
edition = "2021"
description = "A Rust-based mining coordinator for browser WASM miners"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
randomx-rs = "1.2"
parking_lot = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
